# llm-fuzzing

./: .gitignore  Makefile  README.md  conftest.py  pinned_versions.yaml  pyproject.toml  requirements.txt
analysis/: README.md
analysis/metrics/: __init__.py  base.py  m1.py  m2.py
analysis/sanity_diff/: cells.json  sanity_diff.md
analysis/scripts/: ab_coverage_diff.py  ablation_diff.py  ablation_summary.py  campaign_summary.py  citation_usage.py  cost_audit.py  estimate_cost.py  freeze_target_branches.py  friedman_nemenyi.py  harvest_exemplars.py  mann_whitney.py  measure_gap_coverage.py  ok_rate_audit.py  (+6 more)
core/: build_pptx.py  config.py  coverage_utils.py  dataset_schema.py  llm_client.py  logging_config.py  loop_detector.py  prompt_strategies.py  provenance.py  targets.py  variants.py
dataset/: README.md
docker/: Dockerfile.build  Dockerfile.fuzz  docker-compose.yaml
docs/: ABLATION_RESULTS_SUMMARY.md  ABLATION_V3_SLIDE_SUMMARY.md  AB_RE2_REPORT.md  EXPERIMENT_HANDOFF.md  FUTURE_DIRECTIONS.md  HANDOFF_PACK.md  INTEGRITY_AND_NEXT_STEPS.md  LLAMA_ABLATION_RESULTS.md  STATUS.md  WEEKLY_REVIEW_PROMPT.md  claude_code_plan_v3.md  research_document_v3.md
finetuning/: README.md
prediction/: README.md
sanity/: build_fixture.py  config.py  run_sanity.py
scripts/: _ablation_base.py  check_claude_credits.py  check_claude_credits.sh  run_ablation_experiment.py  run_ablation_harfbuzz.py  run_ablation_re2.py  run_campaigns.sh  run_claude_ab.sh  run_e1_stochasticity.sh
synthesis/: README.md
tests/: test_phase9_integration.py
transfer/: README.md
(+311 files in other folders)
